fixed footer position on mobile devices

--- a/web/css/app.css
+++ b/web/css/app.css
@@ -108,3 +108,9 @@ footer #footer-resources i {
 		right: 0;
 	}
 }
+
+@media ( max-height :480px) {
+	footer {
+		display: none;
+	}
+}
