--- a/web/css/app_part_4_my-style_1.css
+++ b/web/css/app_part_4_my-style_1.css
@@ -86,3 +86,9 @@ footer #footer-resources i {
 		right: 0;
 	}
 }
+
+@media ( max-height :480px) {
+	footer {
+		display: none;
+	}
+}
